# linux-system-programmign

./: README.md
cmake-dinamic-lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-dinamic-lib/include/: greetings_en.h  greetings_ja.h
cmake-dinamic-lib/src/: greetings_en.c
cmake-example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake-example  cmake_install.cmake
cmake-example/include/: greetings_es.h  greetings_vi.h
cmake-example/lib/: libgreetings_enjavi.dylib
cmake-example/src/: greetings_es.c  mainapp.c
cmake-static-lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-static-lib/src/: greetings_ja.c  greetings_vi.c
gst-plugin-template/: README.md
gst-plugin-template/src/: gsthelloworldfilter.c  gsthelloworldfilter.h
gst-plugin-tutorial/gst-plugin-tutorial/: main.c
gst-plugin-tutorial/gst-plugin-tutorial.xcodeproj/: project.pbxproj
gst-plugin-tutorial/gst-plugin-tutorial.xcodeproj/project.xcworkspace/xcuserdata/zorot.xcuserdatad/: UserInterfaceState.xcuserstate
gstreamer-tutorial/gstreamer-tutorial/: main.c
gstreamer-tutorial/gstreamer-tutorial.xcodeproj/: project.pbxproj
gstreamer-tutorial/gstreamer-tutorial/Basic/: basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-3.h  basic-tutorial-4.c  basic-tutorial-4.h  basic-tutorial-6.c  basic-tutorial-6.h  basic-tutorial-7.c  basic-tutorial-7.h  basic-tutorial-8.c  basic-tutorial-8.h  basic-tutorial-9.c  basic-tutorial-9.h
(+3 files in other folders)
